--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,8 +1,58 @@
 [
   {
+    "name": "Personal Portfolio",
+    "desc": "A clean, responsive site using HTML5, CSS3, JavaScript, Particle.js, and Vanilla.js, with Tawk API for real-time chat.",
+    "image": "port",
+    "category": "mern",
+    "links": {
+      "view": "",
+      "code": "https://portfolio-pvish.netlify.app/"
+    }
+  },
+  {
+    "name": "Password Manger Web App",
+    "desc": "A React password manager for saving, editing, and copying passwords, with UUID, React Toastify, and local storage.",
+    "image": "pass",
+    "category": "mern",
+    "links": {
+      "view": "",
+      "code": "https://mg-pass.netlify.app/"
+    }
+  },
+  {
+    "name": "To-Do Web App",
+    "desc": "A responsive task management app built with React.js and Tailwind CSS, using React Hooks for state management and GitHub for version control.",
+    "image": "todo",
+    "category": "mern",
+    "links": {
+      "view": "",
+      "code": "https://todo-pvish.netlify.app/"
+    }
+  },
+  {
+    "name": "Weather Web App",
+    "desc": "A weather app that fetches real-time data using the Fetch API and OpenWeatherMap API, built with HTML5, CSS3, and JavaScript.",
+    "image": "weather",
+    "category": "mern",
+    "links": {
+      "view": "",
+      "code": "https://pvish-weather.netlify.app/"
+    }
+  },
+  {
+    "name": "Quiz Web App",
+    "desc": "A 20-question web development quiz with a (Show Answers) button to review responses.",
+    "image": "quiz",
+    "category": "mern",
+    "links": {
+      "view": "",
+      "code": "https://pvish-quizweb.netlify.app/"
+    }
+  },
+  {
     "name": "E-commerce website (Order My Book) ",
-    "desc": "Order My Book is a static and responsive e-commerce website hosted on Netlify. It provides an easy-to-navigate interface for users to browse and purchase books online. The site is powered by modern web technologies including HTML for structuring the content, CSS for styling the layout and appearance, and JavaScript for interactivity and functionality. Additionally, the website leverages the Bootstrap framework, a popular front-end library, to ensure a consistent and mobile-friendly design across devices. Through these technologies,Order My Book offers an efficient and user-friendly platform for book enthusiasts to discover and buy their favorite reads. ",
-    "image": "lm",
+    "desc": " A responsive e-commerce site for browsing and purchasing books online, built with HTML, CSS, JavaScript, and Bootstrap.",
+    "image": "book",
     "category": "mern",
     "links": {
       "view": "",
@@ -11,7 +61,7 @@
   },
   {
     "name": "Amazon Clone ",
-    "desc": "This is an e-commerce website, The site is powered by modern web technologies including HTML for structuring the content, CSS for styling the layout and appearance, and JavaScript for interactivity and functionality. Additionally, the website leverages the Bootstrap framework, a popular front-end library, to ensure a consistent and mobile-friendly design across devices. ",
+    "desc": "An e-commerce site using HTML, CSS, JavaScript, and Bootstrap for a mobile-friendly, interactive experience.",
     "image": "amcl",
     "category": "mern",
     "links": {
