Update password link

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -5,7 +5,7 @@
     "image": "pass",
     "category": "mern",
     "links": {
-      "view": "https://pvordermybook.netlify.app/",
+      "view": "https://pvmgpass.netlify.app/",
       "code": "https://github.com/pvishwakarma09/password-manager"
     }
   },
